# memory.server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh  setup.sh  train.sh
docs/: live-self-modification.md  spark-migration.md
launchd/: ai.kortexa.memory.plist  ai.kortexa.memory.server.plist
scripts/: ingest_sessions.py
src/memory_server/: config.py  embeddings.py  main.py  models.py
src/memory_server/api/: ingest.py  recall.py  status.py  store.py  train.py
src/memory_server/llm/: client.py  engine.py
src/memory_server/storage/: sqlite.py
src/memory_server/training/: __init__.py  convert.py  data_prep.py  train.py  train_mlx.py  train_unsloth.py
systemd/: kortexa-ai-memory-server.service
