[project]
name = "memory-server"
version = "0.1.0"
description = "Neural memory server for AI agents — persistent knowledge via LLM-powered recall and weight-space encoding"
authors = [
    { name = "kortexa.ai", email = "francip@kortexa.ai" }
]
keywords = ["memory", "agents", "lora", "fastapi", "llm", "rag", "kortexa"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "fastembed>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/kortexa-ai/memory.server"
Repository = "https://github.com/kortexa-ai/memory.server"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "mypy>=1.13.0",
]
train-mac = [
    "mlx-lm>=0.20.0",
]
train-linux = [
    "unsloth>=2024.12",
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
]
convert = [
    "torch>=2.4.0",
    "safetensors>=0.4.0",
    "transformers>=4.45.0",
]

[project.scripts]
"memory-server" = "memory_server.main:run"
"memory-ensure-adapter" = "memory_server.main:ensure_adapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_server"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
